移除无用Task