@@ -10,16 +10,14 @@ buildscript {
 }
 
 
-import groovy.json.JsonBuilder
 import net.minecraftforge.forge.tasks.*
-import net.minecraftforge.gradle.common.tasks.DownloadMavenArtifact
 import net.minecraftforge.gradle.common.tasks.ExtractInheritance
 import net.minecraftforge.gradle.patcher.tasks.ReobfuscateJar
 import org.gradle.plugins.ide.eclipse.model.SourceFolder
 
 import java.nio.file.Files
 
-import static net.minecraftforge.forge.tasks.Util.*
+import static net.minecraftforge.forge.tasks.Util.getArtifactsOffline
 
 plugins {
     id 'org.cadixdev.licenser' version '0.6.1'
@@ -509,222 +507,6 @@ project(':forge') {
     genPatches {
         autoHeader true
         lineEnding = '\n'
-    }
-
-    task launcherJson() {
-        inputs.file universalJar.archiveFile
-        inputs.file { launcherJar.archiveFile }
-        ext {
-            output = file('build/version.json')
-            vanilla = project(':mcp').file('build/mcp/downloadJson/version.json')
-            timestamp = iso8601Now()
-            comment = [
-                    "Please do not automate the download and installation of Forge.",
-                    "Our efforts are supported by ads from the download page.",
-                    "If you MUST automate this, please consider supporting the project through https://www.patreon.com/LexManos/"
-            ]
-            def idx = project.version.indexOf('-')
-            id = project.version.substring(0, idx) + "-${project.name}" + project.version.substring(idx)
-        }
-        inputs.file vanilla
-        outputs.file output
-        doLast {
-            def json_vanilla = vanilla.json()
-            def json = [
-                    _comment_: comment,
-                    id: id,
-                    time: timestamp,
-                    releaseTime: timestamp,
-                    type: 'release',
-                    mainClass: 'cpw.mods.modlauncher.Launcher',
-                    inheritsFrom: MC_VERSION,
-                    logging: {},
-                    arguments: [
-                            game: ['--launchTarget', 'fmlclient', '--fml.forgeVersion',  "${project.version.substring(MC_VERSION.length() + 1)}", '--fml.mcVersion', "${MC_VERSION}", '--fml.forgeGroup', "${project.group}", '--fml.mcpVersion', "${MCP_VERSION}"],
-                            // Support running with Java 8 and up, including 16
-                            jvm: [
-                                    // Allow these JVM args to not crash Java 8
-                                    '-XX:+IgnoreUnrecognizedVMOptions',
-                                    // ModLauncher uses sun.security.util.ManifestEntryVerifier and needs access to it
-                                    '--add-exports=java.base/sun.security.util=ALL-UNNAMED',
-                                    // JDK bug, not fixed properly - https://bugs.openjdk.java.net/browse/JDK-8186019
-                                    '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming',
-                                    // ModLauncher reflects field 'jv' in java.util.jar.JarVerifier
-                                    '--add-opens=java.base/java.util.jar=ALL-UNNAMED'
-                            ]
-                    ],
-                    libraries: [
-                            [
-                                    //Package our launcher jar as the 'main' jar Mojang's launcher loads. It will in turn load Forge's regular jars itself.
-                                    name: "${project.group}:${project.name}:${project.version}",
-                                    downloads: [
-                                            artifact: [
-                                                    path: "${project.group.replace('.', '/')}/${project.name}/${project.version}/${project.name}-${project.version}.jar",
-                                                    url: "", //Do not include the URL so that the installer/launcher won't grab it. This is also why we don't have the universal classifier
-                                                    sha1: launcherJar.archiveFile.get().asFile.sha1(),
-                                                    size: launcherJar.archiveFile.get().asFile.length()
-                                            ]
-                                    ]
-                            ]
-                    ]
-            ]
-
-            def artifacts = getArtifactsOffline(project, project.configurations.installer, false)
-            artifacts.each { key, lib ->
-                json.libraries.add(lib)
-            }
-
-            output.text = new JsonBuilder(json).toPrettyString()
-        }
-    }
-
-    task installerJson(dependsOn: [launcherJson, genClientBinPatches, applyClientBinPatches, applyServerBinPatches/*, createClientSRG, createServerSRG*/]) {
-        ext {
-            output = file('build/install_profile.json')
-            JAR_SPLITTER = 'net.minecraftforge:jarsplitter:1.1.4'
-        }
-        doFirst {
-            ext.BIN_PATCHER = BINPATCH_TOOL.substring(0, BINPATCH_TOOL.length() - 1 - BINPATCH_TOOL.split(':')[3].length())
-        }
-        inputs.file applyClientBinPatches.output
-        inputs.file applyServerBinPatches.output
-        inputs.file genClientBinPatches.toolJar
-        inputs.file launcherJson.output
-        /*
-        inputs.file createClientSRG.output
-        inputs.file createServerSRG.output
-        */
-        outputs.file output
-        doLast {
-            def libs = [
-                    "${project.group}:${project.name}:${project.version}:universal": [
-                            name: "${project.group}:${project.name}:${project.version}:universal",
-                            downloads: [
-                                    artifact: [
-                                            path: "${project.group.replace('.', '/')}/${project.name}/${project.version}/${project.name}-${project.version}-universal.jar",
-                                            url: "", //Do not include the URL so that the installer/launcher won't grab it. This is also why we don't have the universal classifier
-                                            sha1: universalJar.archiveFile.get().asFile.sha1(),
-                                            size: universalJar.archiveFile.get().asFile.length()
-                                    ]
-                            ]
-                    ]
-            ]
-            def json = [
-                    _comment_: launcherJson.comment,
-                    spec: 0,
-                    profile: 'CatServer',
-                    version: launcherJson.id,
-                    icon: "data:image/png;base64," + new String(Base64.getEncoder().encode(Files.readAllBytes(rootProject.file("icon.ico").toPath()))),
-                    json: '/version.json',
-                    path: "${project.group}:${project.name}:${project.version}",
-                    logo: '/big_logo.png',
-                    minecraft: MC_VERSION,
-                    welcome: "Welcome to the simple CatServer installer.",
-                    mirrorList: "https://files.minecraftforge.net/mirrors-2.0.json",
-                    data: [
-                            MAPPINGS: [
-                                    client: "[${MCP_ARTIFACT.group}:${MCP_ARTIFACT.name}:${MCP_ARTIFACT.version}:mappings@txt]",
-                                    server: "[${MCP_ARTIFACT.group}:${MCP_ARTIFACT.name}:${MCP_ARTIFACT.version}:mappings@txt]"
-                            ],
-                            BINPATCH: [
-                                    client: '/data/client.lzma',
-                                    server: '/data/server.lzma'
-                            ],
-                            MC_SLIM: [
-                                    client: "[net.minecraft:client:${MC_VERSION}-${MCP_VERSION}:slim]",
-                                    server: "[net.minecraft:server:${MC_VERSION}-${MCP_VERSION}:slim]"
-                            ],
-                            MC_SLIM_SHA: [
-                                    client: "'${tasks.getByName('downloadClientSlim').output.get().asFile.sha1()}'",
-                                    server: "'${tasks.getByName('downloadServerSlim').output.get().asFile.sha1()}'"
-                            ],
-                            MC_EXTRA: [
-                                    client: "[net.minecraft:client:${MC_VERSION}-${MCP_VERSION}:extra]",
-                                    server: "[net.minecraft:server:${MC_VERSION}-${MCP_VERSION}:extra]"
-                            ],
-                            MC_EXTRA_SHA: [
-                                    client: "'${tasks.getByName('downloadClientExtra').output.get().asFile.sha1()}'",
-                                    server: "'${tasks.getByName('downloadServerExtra').output.get().asFile.sha1()}'"
-                            ],
-                            MC_SRG: [
-                                    client: "[net.minecraft:client:${MC_VERSION}-${MCP_VERSION}:srg]",
-                                    server: "[net.minecraft:server:${MC_VERSION}-${MCP_VERSION}:srg]"
-                            ],
-                            PATCHED: [
-                                    client: "[${project.group}:${project.name}:${project.version}:client]",
-                                    server: "[${project.group}:${project.name}:${project.version}:server]"
-                            ],
-                            PATCHED_SHA: [
-                                    client: "'${applyClientBinPatches.output.get().asFile.sha1()}'",
-                                    server: "'${applyServerBinPatches.output.get().asFile.sha1()}'"
-                            ],
-                            MCP_VERSION: [
-                                    client: "'${MCP_VERSION}'",
-                                    server: "'${MCP_VERSION}'"
-                            ]
-                    ],
-                    processors: [
-                            [
-                                    jar: INSTALLER_TOOLS,
-                                    classpath: getClasspath(project, libs, INSTALLER_TOOLS),
-                                    args: [
-                                            '--task', 'MCP_DATA',
-                                            '--input', "[${MCP_ARTIFACT.descriptor}]",
-                                            '--output', '{MAPPINGS}',
-                                            '--key', 'mappings'
-                                    ]
-                            ], [
-                                    jar: JAR_SPLITTER,
-                                    classpath: getClasspath(project, libs, JAR_SPLITTER),
-                                    args: [
-                                            '--input', '{MINECRAFT_JAR}',
-                                            '--slim',  '{MC_SLIM}',
-                                            '--extra', '{MC_EXTRA}',
-                                            '--srg', '{MAPPINGS}'
-                                    ],
-                                    outputs: [
-                                            '{MC_SLIM}': '{MC_SLIM_SHA}',
-                                            '{MC_EXTRA}': '{MC_EXTRA_SHA}'
-                                    ]
-                            ], [
-                                    jar: SPECIAL_SOURCE_MCP,
-                                    classpath: getClasspath(project, libs, SPECIAL_SOURCE_MCP),
-                                    args: [
-                                            //'--stable', Java 9 Is borked, https://bugs.openjdk.java.net/browse/JDK-8184940 TODO: find a fix.
-                                            '--in-jar', '{MC_SLIM}',
-                                            '--out-jar', '{MC_SRG}',
-                                            '--srg-in', '{MAPPINGS}'
-                                    ]
-                            ], [
-                                    jar: BIN_PATCHER,
-                                    classpath: getClasspath(project, libs, BIN_PATCHER),
-                                    args: [
-                                            '--clean', '{MC_SRG}',
-                                            '--output', '{PATCHED}',
-                                            '--apply', '{BINPATCH}'
-                                    ],
-                                    outputs: [
-                                            '{PATCHED}': '{PATCHED_SHA}'
-                                    ]
-                            ]
-                    ]
-            ]
-            getClasspath(project, libs, MCP_ARTIFACT.descriptor) //Tell it to download mcp_config
-            json.libraries = libs.values().sort{a,b -> a.name.compareTo(b.name)}
-
-            output.text = new JsonBuilder(json).toPrettyString()
-        }
-    }
-
-    ['client', 'server'].each { side ->
-        ['slim', 'extra'].each { type ->
-            def name = "download${side.capitalize()}${type.capitalize()}"
-            task "${name}"(type: DownloadMavenArtifact) {
-                artifact = "net.minecraft:${side}:${MC_VERSION}-${MCP_VERSION}:${type}"
-            }
-            installerJson.dependsOn(name)
-            installerJson.inputs.file(tasks.getByName(name).output)
-        }
     }
 
     universalJar {
